--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -55,7 +55,8 @@ park:
 coaster_ranking:
     title: 'Clasificación de las mejores montañas rusas - %rankingMonth%'
     description: 'Clasificación de las mejores montañas rusas del mundo por nuestros usuarios. Envíe un comentario y califique las montañas rusas que ha montado para participar.'
-    reviews_number: '1 reseña|%count% reseñas'
+    rating_number: '1 reseña|%count% reseñas'
+    top_number: '1 top|%count% tops'
     info:
         title: '¡ Mira nuestra nueva clasificación de montañas rusas !'
         text: 'Esta clasificación se basa en un nuevo algoritmo, más preciso y más complejo que antes. Tomamos en cuenta vuestros calificaciones para cada montaña rusa y su posición en vuestros Tops Coasters. Próxima actualización %date%.'
