--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -55,7 +55,8 @@ park:
 coaster_ranking:
     title: 'Classement des meilleurs coasters - %rankingMonth%'
     description: 'Classement des meilleurs montagnes russes du monde, par nos utilisateurs. Donne ton avis et met des notes pour participer à ce classement des coasters.'
-    reviews_number: '1 note|%count% notes'
+    rating_number: '1 note|%count% notes'
+    top_number: '1 top|%count% tops'
     info:
         title: 'Participe au classement !'
         text: 'Le classement des meilleurs coasters prend en compte les notes et les tops de tous les utilisateurs. <a href="%link_path%">Connecte toi</a> et commence à noter des coasters pour y participer. Plus tu as de notes et plus ton avis va peser dans le classement ! Prochaine mise à jour %date%.'
