--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -8,7 +8,7 @@ app:
     title:
         default: '¡ Bienvenido !'
     header:
-        search: 'Buscar una montaña rusa'
+        search: 'Mirabilandia, Shambhala...'
 
 index:
     title: '¡ Bienvenido !'
