add continent entity

--- a/app/Resources/translations/database.en.yml
+++ b/app/Resources/translations/database.en.yml
@@ -112,3 +112,9 @@ country.lebanon: 'Lebanon'
 country.na: 'N/A'
 country.burma: 'Burma'
 country.cyprus: 'Cyprus'
+
+continent.europe: 'Europe'
+continent.america: 'America'
+continent.asia: 'Asia'
+continent.africa: 'Africa'
+continent.oceania: 'Oceania'
