fix list feature

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -144,8 +144,10 @@ liste:
         by: 'by'
         infotitle: 'All you lists are on this page !'
         info: 'Lists are the best way to share your passion : tell us which RMC is the best on the Planet, the worst kiddies in Texas, or why not the best water coasters with a LIM ! It''s up to you !'
+        create: 'Create a new list'
     title: 'My Top Coasters'
-    update: 'Update the list'
+    update: 'Update list'
+    update_details: 'Change name'
     save: 'Save the list'
     find: 'Find a coaster...'
     info: 'Start by searching a coaster up there, then the magic happens below. You can even drag and drop lines if you are undecided.'
