--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -237,7 +237,7 @@ notif:
     badge:
         message: 'Check it out: Captain just gave you the "%name%" badge !'
     ranking:
-        message: 'Ranking of the world''s best coasters just got updated. Check out the new top 10 !'
+        message: 'Ranking of the world''s best coasters just got updated. From this month, kiddie coasters are no longer ranked.'
     email:
         title: '🎢 New notification on Captain Coaster'
         gotnotif: 'You just received a new notification on Captain Coaster :'
