updates before ranking

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -64,7 +64,9 @@ coaster_ranking:
     top_number: '1 top|%count% tops'
     info:
         title: 'Join the ranking!'
-        text: 'The ranking of world''s best coasters takes into account every ratings and tops from each user. <a href="%link_path%">Sign in</a> and start rating coasters now to be part of it. The more you rate coasters, the more you weigh on the ranking! Next update %date%.'
+        desc: 'The ranking of world''s best coasters takes into account every ratings and tops from each user. <a href="%link_path%">Sign in</a> and start rating coasters now to be part of it. The more you rate coasters, the more you weigh on the ranking!'
+        next:  'Next update %date%.'
+        stats: 'This month, the roller coaster ranking was built from %ratings% ratings and %tops% Top Coasters, created by %users% users. From all this, the algorithm analyzed %comparisons% comparisons between coasters to rank %coasters% of them.'
 
 map_index:
     title: 'Coasters Map'
