update tag names

--- a/app/Resources/translations/database.en.yml
+++ b/app/Resources/translations/database.en.yml
@@ -13,9 +13,9 @@ launch.electrical: 'Electrical launch'
 con.rattle: 'Rattle'
 con.headbanging: 'Headbanging'
 con.short: 'Too short'
-con.theming: 'No theming'
+con.theming: 'Theming'
 con.capacity: 'Capacity'
-con.restraints: 'Restraints'
+con.restraints: 'Harness'
 con.inversions: 'Inversions'
 con.disappointing: 'Disappointing!'
 con.discomfort: 'Discomfort'
@@ -27,6 +27,7 @@ con.deadspots: 'Dead spots'
 con.layout: 'Layout'
 con.intensity: 'Intensity'
 con.reliability: 'Reliability'
+con.lapbar: 'Lap Bar'
 
 pro.airtimes: 'Airtimes'
 pro.firstdrop: 'First Drop'
@@ -41,11 +42,13 @@ pro.launch: 'Launch'
 pro.pace: 'Pace'
 pro.fun: 'Fun'
 pro.masterpiece: 'Masterpiece'
-pro.restraints: 'Restraints'
+pro.restraints: 'Harness'
 pro.intensity: 'Intensity'
 pro.smoothness: 'Smoothness'
 pro.layout: 'Layout'
 pro.ejectors: 'Ejectors'
+pro.hangtime: 'Hangtime'
+pro.duration: 'Duration'
 
 restraint.none: 'None'
 restraint.flying: 'Flying Coaster'
