--- a/app/Resources/translations/database.es.yml
+++ b/app/Resources/translations/database.es.yml
@@ -13,7 +13,7 @@ launch.electrical: 'Lanzamiento eléctrico'
 con.rattle: 'Vibración'
 con.headbanging: 'Torta'
 con.short: 'Demasiado corto'
-con.theming: 'Sin temer'
+con.theming: 'Tematización'
 con.capacity: 'Capacidad'
 con.restraints: 'Arnés'
 con.inversions: 'Inversiones'
@@ -27,6 +27,7 @@ con.deadspots: 'Tiempo muerto'
 con.layout: 'Layout'
 con.intensity: 'Intensidad'
 con.reliability: 'Confiabilidad'
+con.lapbar: 'Lap Bar'
 
 pro.airtimes: 'Airtimes'
 pro.firstdrop: 'Primera caída'
@@ -46,6 +47,8 @@ pro.intensity: 'Intensidad'
 pro.smoothness: 'Suavidad'
 pro.layout: 'Layout'
 pro.ejectors: 'Ejectors'
+pro.hangtime: 'Hangtime'
+pro.duration: 'Duración'
 
 restraint.none: 'Ninguno'
 restraint.flying: 'Flying Coaster'
