--- a/app/Resources/translations/database.fr.yml
+++ b/app/Resources/translations/database.fr.yml
@@ -13,7 +13,7 @@ launch.electrical: 'Propulsion électrique'
 con.rattle: 'Vibrations'
 con.headbanging: 'Baffes'
 con.short: 'Trop court'
-con.theming: 'Pas de théma'
+con.theming: 'Théma'
 con.capacity: 'Débit'
 con.restraints: 'Harnais'
 con.inversions: 'Inversions'
@@ -27,6 +27,7 @@ con.deadspots: 'Temps mort'
 con.layout: 'Layout'
 con.intensity: 'Intensité'
 con.reliability: 'Fiabilité'
+con.lapbar: 'Lap Bar'
 
 pro.airtimes: 'Airtimes'
 pro.firstdrop: 'First Drop'
@@ -46,6 +47,8 @@ pro.intensity: 'Intensité'
 pro.smoothness: 'Fluidité'
 pro.layout: 'Layout'
 pro.ejectors: 'Ejectors'
+pro.hangtime: 'Hangtime'
+pro.duration: 'Longueur'
 
 restraint.none: 'Aucun'
 restraint.flying: 'Flying Coaster'
