--- a/app/Resources/translations/termsOfUse.en.yml
+++ b/app/Resources/translations/termsOfUse.en.yml
@@ -7,7 +7,7 @@ terms:
            <p>To definitely close your account on Captain Coaster, please <a href="%link_href%">contact us</a>. Your access and personal information will be then deleted by an admin.</p>'
 hosting:
     title: 'Hosting'
-    text: 'Captain Coaster is hosted by Vultr, whose address is : 14 Cliffwood Avenue, Suite 300, Metropark South, Matawan, NJ 07747. Our servers are located in Paris, France.'
+    text: 'Captain Coaster is hosted by Amazon Web Services, whose headquarters are in Seattle, Washington, United States. Our servers are located in Paris, France.'
 copyright:
     title: 'Copyright'
     text: '<p>The "Captain Coaster" logo belongs to Benjamin R., Captain Coaster has the exclusive rights to use and modify it. Any reproduction without authorization is forbidden.</p>
