--- a/app/Resources/translations/termsOfUse.fr.yml
+++ b/app/Resources/translations/termsOfUse.fr.yml
@@ -7,7 +7,7 @@ terms:
            <p>Pour supprimer définitivement son espace personnel, merci de nous formuler la demande via la page <a href="%link_href%">Contact</a>.</p>'
 hosting:
     title: 'Hébergement'
-    text: 'Captain Coaster est hébergé par Vultr, dont le siège social est au 14 Cliffwood Avenue, Suite 300, Metropark South, Matawan, NJ 07747. Nos serveurs sont localisés à Paris, en France.'
+    text: 'Captain Coaster est hébergé par Amazon Web Services, dont le siège social est à Seattle, Washington, Etats-Unis. Nos serveurs sont localisés à Paris, France.'
 copyright:
     title: 'Droits d''auteur'
     text: '<p>Le logo "Captain Coaster" et ses dérivés ont été créés par Benjamin R., qui en a donné les droits exclusifs d''utilisation et modification à l''équipe du site. Toute reproduction est interdite sans son accord écrit.</p>
