--- a/app/Resources/translations/termsOfUse.es.yml
+++ b/app/Resources/translations/termsOfUse.es.yml
@@ -2,12 +2,12 @@ title: 'Términos de Uso'
 terms:
     title: 'Usando Captain Coaster'
     text: '<p>Captain Coaster es un sitio comunitario gratuito y no oficial para los entusiastas de parques temáticos y montañas rusas.  No está afiliado a ningún parque, fabricante o compañía en la industria del entretenimiento. A nadie se le paga por administrarlo, excepto con la gratitud de los miembros.</p>
-           <p>Está abierto a cualquiera : solo necesita conectarse para compartir su experiencia en montañas rusas (notas, etiquetas, reseñas). Para acceder a estas características, necesitará una cuenta <b>válida</b> de Facebook o Google.. <b>Tener cuentas múltiples está definitivamente prohibido y dará lugar a una prohibición permanente.</p>
+           <p>Está abierto a cualquiera : solo necesita conectarse para compartir su experiencia en montañas rusas (notas, etiquetas, reseñas). Para acceder a estas características, necesitará una cuenta <b>válida</b> de Facebook o Google.. <b>Tener cuentas múltiples está definitivamente prohibido y dará lugar a una prohibición permanente.</b></p>
            <p>Todos los campos participativos son leídos por los moderadores del equipo que se reservan el derecho de editar o eliminar cualquier publicación. Están prohibidos por la ley francesa: violencia, racismo, amenazas, insultos, homofobia, xenofobia, apología del terrorismo... Los miembros pueden ser prohibidos de manera temporal o permanente por cualquiera de estos motivos.</p>
            <p>Para cerrar definitivamente tu cuenta en Captain Coaster, por favor <a href="%link_href%">contáctanos</a>. Vuestros acceso e información personal serán eliminados por un administrador.</p>'
 hosting:
     title: 'Alojamiento '
-    text: 'Captain Coaster es alojado por Vultr, cuya dirección es : 14 Cliffwood Avenue, Suite 300, Metropark South, Matawan, NJ 07747. Nuestros servidores están ubicados en Paris, Francia.'
+    text: 'Captain Coaster es alojado por Amazon Web Services, cuya oficine central es en Seattle, Washington, Estados Unidos. Nuestros servidores están ubicados en Paris, Francia.'
 copyright:
     title: 'Derechos de autor'
     text: '<p>El logotipo "Captain Coaster" pertenece a Benjamin R., Él tiene los derechos exclusivos para usar y modificarlo. Cualquier reproducción sin autorización está prohibida.</p>
