--- a/app/Resources/translations/database.en.yml
+++ b/app/Resources/translations/database.en.yml
@@ -115,6 +115,7 @@ country.lebanon: 'Lebanon'
 country.na: 'N/A'
 country.burma: 'Burma'
 country.cyprus: 'Cyprus'
+country.ireland: 'Ireland'
 
 continent.europe: 'Europe'
 continent.america: 'America'
