--- a/app/Resources/translations/database.fr.yml
+++ b/app/Resources/translations/database.fr.yml
@@ -115,6 +115,7 @@ country.lebanon: 'Liban'
 country.na: 'N/A'
 country.burma: 'Birmanie'
 country.cyprus: 'Chypre'
+country.ireland: 'Irlande'
 
 continent.europe: 'Europe'
 continent.america: 'Amérique'
