--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -261,6 +261,9 @@ badge:
     teamkatun: 'Team Katun'
     teamispeed: 'Team iSpeed'
 
+image:
+    credit: 'Crédit: %name%'
+
 error:
     404:
         title: 'Page non trouvée'
